fixed timestamp covering url in ReplayUI; added user mail for 'approved'

--- a/frontend/src/components/controls/ReplayURLBar/style.scss
+++ b/frontend/src/components/controls/ReplayURLBar/style.scss
@@ -50,7 +50,8 @@
 }
 
 .wr-app-url {
-    position: relative;
+    flex: 1 1 200px;
+    min-width: 200px;
 
     .replay-date > span {
         margin-left: .5rem;
@@ -100,4 +101,12 @@
        }
     }
 
+}
+
+.input-group {
+  flex-flow: row wrap;
+}
+
+.timestamp {
+  flex: 0 0 auto;
 }
